# Real-Time-Data-Processing-System-for-Weather-Monitoring-with-Rollups-and-Aggregates

./: README.md  fetch_and_store_weather.py  get_daily_summary.py  setup_database.py  weather_data.py  weather_data_finall_visualization.py
Real-time-weather-Monitoring/: apiconnection.py  check_database.py  fetch_weather.py  fetch_weather_with_conversion.py  insert_weather_data.py  plot_temperatures.py  weather_alerts.py  weather_data.db
Real-time-weather-Monitoring/weather-service/: main.py
Real-time-weather-Monitoring/weather-service/weather_service/: dash_app_statistics.py  dash_app_threshold.py  db_models.py  main.py  utils.py
weather-service/: Dockerfile  pyproject.toml
weather-service/tests/: test_server.py
weather-service/weather_service/: dash_app_alerts.py  db_utils.py
