[tool.poetry]
name = "weather-service"
version = "0.1.0"
description = ""
authors = ["Ayush Anand <36472216+ayushanand18@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.31"
apscheduler = "^3.10.4"
fastapi = "^0.111.1"
dash = "^2.17.1"
pandas = "^2.2.2"
pyjwt = "^2.8.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
